--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -30,6 +30,7 @@
         <item
             android:id="@+id/action_test"
             android:title="@string/menu_test"
+            android:visible="false"
             app:showAsAction="never" />
 
     </group>
