LogActivity & UI update
~ implement: LogActivity
~ update: UI (ongoing)

--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -35,4 +35,9 @@
 
     </group>
 
+    <item
+        android:id="@+id/action_screenshot"
+        android:title="使用记录"
+        app:showAsAction="never" />
+
 </menu>
