--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorPurpleMain">#6F3381</color>
     <color name="colorPurpleDark">#5F2371</color>
     <color name="white">#ffffff</color>
+    <color name="background">#5E3D50</color>
 </resources>
