--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/basic_background"
+    android:background="@color/background"
     android:orientation="vertical"
     tools:context="com.lion.AimingCam.WebActivity">
 
@@ -20,63 +20,69 @@
     <LinearLayout
         android:id="@+id/layoutAimButtons"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:background="@color/background"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="150dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@android:color/transparent"
+            android:gravity="center"
+            android:text="瞄准距离"
+            android:textColor="@color/white" />
 
         <Button
             android:id="@+id/buttonAim10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@android:color/transparent"
             android:onClick="onMoveAim"
-            android:text="@string/button_10m" />
+            android:text="@string/button_10m"
+            android:textColor="@color/white" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="25dp"
+            android:alpha="0.6"
+            android:background="@color/white" />
 
         <Button
             android:id="@+id/buttonAim20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@android:color/transparent"
             android:onClick="onMoveAim"
-            android:text="@string/button_20m" />
+            android:text="@string/button_20m"
+            android:textColor="@color/white" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="25dp"
+            android:alpha="0.6"
+            android:background="@color/white" />
 
         <Button
             android:id="@+id/buttonAim30"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@android:color/transparent"
             android:onClick="onMoveAim"
-            android:text="@string/button_30m" />
+            android:text="@string/button_30m"
+            android:textColor="@color/white" />
     </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/layoutWebView"
-        android:layout_width="match_parent"
-        android:layout_height="400dp">
-
-        <com.lion.AimingCam.MyWebView
-            android:id="@+id/webView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            tools:layout_editor_absoluteX="8dp"
-            tools:layout_editor_absoluteY="8dp">
-
-        </com.lion.AimingCam.MyWebView>
-
-        <ImageView
-            android:id="@+id/imageViewAim"
-            android:layout_width="8dp"
-            android:layout_height="8dp"
-            android:layout_alignBottom="@+id/webView"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="200dp"
-            app:srcCompat="@drawable/aim" />
-
-    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/layoutCalibrateButtons"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:background="@color/background"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <Button
@@ -84,49 +90,66 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@android:color/transparent"
             android:onClick="onCalibrationButtonClick"
-            android:text="@string/button_up" />
+            android:text="@string/button_up"
+            android:textColor="@color/white" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="25dp"
+            android:alpha="0.6"
+            android:background="@color/white" />
 
         <Button
             android:id="@+id/buttonAimDown"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@android:color/transparent"
             android:onClick="onCalibrationButtonClick"
-            android:text="@string/button_down" />
+            android:text="@string/button_down"
+            android:textColor="@color/white" />
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="25dp"
+            android:alpha="0.6"
+            android:background="@color/white" />
 
         <Button
             android:id="@+id/buttonAimSet"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@android:color/transparent"
             android:onClick="onCalibrationButtonClick"
-            android:text="@string/button_set" />
+            android:text="@string/button_set"
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
-    <LinearLayout
-        android:id="@+id/layoutWelcome"
+    <RelativeLayout
+        android:id="@+id/layoutWebView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center_vertical|center_horizontal|center"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
+
+        <com.lion.AimingCam.MyWebView
+            android:id="@+id/webView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </com.lion.AimingCam.MyWebView>
 
         <ImageView
-            android:id="@+id/imageViewTsinghuaLogo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:visibility="gone"
-            app:srcCompat="@drawable/tsinghua_logo" />
+            android:id="@+id/imageViewAim"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignBottom="@+id/webView"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="200dp"
+            app:srcCompat="@drawable/aim" />
 
-        <TextView
-            android:id="@+id/textViewWelcome"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_vertical|center"
-            android:text="@string/app_name"
-            android:visibility="gone" />
-    </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
